--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,7 +8,24 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <td>follows</td>
+    
+    <td><%= user.followings.count %></td>
+  <tr>
+  <tr>
+    <td>followers</td>
+    <td><%= user.followers.count %></td>
+  </tr>
 </table>
+
+<div class='row'>
+  <% if current_user.following?(user) %>
+    <td><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %></td>
+  <% else %>
+     <td><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %></td>
+  <% end %>
+</div>
 　
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
